--- a/src/Components/Form/Switch/Switch.module.css
+++ b/src/Components/Form/Switch/Switch.module.css
@@ -1,7 +1,10 @@
-.container{
+.container {
 	position: absolute;
-	top:0;
-	left: 100px;
+	height: 100%;
+	left: 80px;
+	top: 23px;
+	display: flex;
+	width: 100px;
 }
 .input {
 	width: 0;
@@ -32,4 +35,25 @@
 	background-color: #fff;
 	border: 0.5px solid black;
 	transform: translateX(-100%);
+}
+
+img{
+	width: 18px;
+	height: 18px;
+	cursor: pointer;
+
+}
+.addIcon {
+	margin-left: 10px;
+}
+.childrenContainer{
+	display: flex;
+	flex-direction: column;
+}
+.childrenContainer div {
+	position: relative;
+}
+.substractIcon{
+	position: absolute;
+	left: -155px;
 }
