--- a/src/index.css
+++ b/src/index.css
@@ -16,9 +16,9 @@ body {
 	place-items: center;
 	min-width: 320px;
 	min-height: 100vh;
-	overflow: hidden;
+	overflow-x: hidden;
 	font-family: 'Instrument Serif', serif;
 }
-input {
+* {
 	font-family: 'Instrument Serif', serif;
 }
