--- a/src/Components/Form/Section/Section.module.css
+++ b/src/Components/Form/Section/Section.module.css
@@ -4,5 +4,5 @@
 	justify-content: space-between;
 	margin: 0 50px;
 	padding: 20px 0;
-	border-top: 0.5px solid #000000;
+	border-bottom: 0.5px solid #000000;
 }
