--- a/src/Components/Form/Form.module.css
+++ b/src/Components/Form/Form.module.css
@@ -3,11 +3,14 @@
 }
 .container {
 	width: 630px;
-	height: 779px;
 	border: 0.5px solid #000000;
-	padding: 50px 50px;
+	padding: 120px 50px;
+	margin-bottom: 20px;
 }
 .container h3 {
+	padding-bottom: 50px;
+	margin: 0 50px;
+	border-bottom: 0.5px solid #000000;
 	font-size: 26px;
 	text-transform: uppercase;
 }
@@ -16,14 +19,6 @@
 	animation: fadeIn 5s ease-in forwards;
 }
 
-@keyframes fadeIn {
-	from {
-		opacity: 0;
-	}
-	to {
-		opacity: 1;
-	}
-}
 .vegetablesContainer {
 	display: grid;
 	gap: 15px 5px;
@@ -46,4 +41,12 @@
 .vegetablesContainer input:checked + label {
 	background-color: white;
 	border: 1px solid black;
+}
+@keyframes fadeIn {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
 }
