--- a/src/Components/Form/Form.module.css
+++ b/src/Components/Form/Form.module.css
@@ -15,10 +15,6 @@
 	text-transform: uppercase;
 }
 
-.fadeIn {
-	animation: fadeIn 5s ease-in forwards;
-}
-
 .vegetablesContainer {
 	display: grid;
 	gap: 15px 5px;
@@ -42,6 +38,15 @@
 	background-color: white;
 	border: 1px solid black;
 }
+.spreadContainer {
+	display: flex;
+	justify-content: space-between;
+	width: 120px;
+}
+
+.fadeIn {
+	animation: fadeIn 5s ease-in forwards;
+}
 @keyframes fadeIn {
 	from {
 		opacity: 0;
@@ -49,4 +54,20 @@
 	to {
 		opacity: 1;
 	}
+}
+.radiusCheckbox,
+.radiusCheckbox::before {
+	border-radius: 50%;
+}
+.servingContainer {
+	display: flex;
+	flex-direction: row-reverse;
+	width: 300px;
+	text-align: left;
+}
+.toppingContainer {
+	display: flex;
+	width: 120px;
+	justify-content: space-between;
+
 }
