--- a/src/Components/Form/Section/Section.module.css
+++ b/src/Components/Form/Section/Section.module.css
@@ -6,3 +6,13 @@
 	padding: 20px 0;
 	border-bottom: 0.5px solid #000000;
 }
+.title{
+	font-family: 'Instrument Serif', serif;
+	font-size: 18px;
+	font-weight: 400;
+	line-height: 23.4px;
+	text-align: left;
+	text-underline-position: from-font;
+	text-decoration-skip-ink: none;
+
+}
