--- a/src/index.css
+++ b/src/index.css
@@ -17,8 +17,8 @@ body {
 	min-width: 320px;
 	min-height: 100vh;
 	overflow-x: hidden;
-	font-family: 'Instrument Serif', serif;
+	font-family: Oxygen Mono;
 }
 * {
-	font-family: 'Instrument Serif', serif;
+	font-family: Oxygen Mono;
 }
