--- a/src/Components/Form/Switch/Switch.module.css
+++ b/src/Components/Form/Switch/Switch.module.css
@@ -37,23 +37,58 @@
 	transform: translateX(-100%);
 }
 
-img{
-	width: 18px;
-	height: 18px;
-	cursor: pointer;
-
-}
 .addIcon {
 	margin-left: 10px;
 }
-.childrenContainer{
+.addIcon,
+.substractIcon {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: relative;
+	height: 17px;
+	width: 17px;
+	border-radius: 50%;
+	border: 0.5px solid black;
+	cursor: pointer;
+	background-color: transparent;
+	transition: 0.4s;
+}
+.addIcon::after,
+.addIcon::before,
+.substractIcon::after {
+	content: '';
+	position: absolute;
+	width: 10px;
+	height: 0.5px;
+	background-color: black;
+}
+.addIcon::before {
+	transform: rotate(-90deg);
+}
+.substractIcon {
+	position: absolute;
+	left: -155px;
+	top: 50%;
+	transform: translateY(-50%);
+}
+.substractIcon::after {
+	content: '';
+	position: absolute;
+}
+.addIcon:hover,
+.substractIcon:hover {
+	background-color: black;
+}
+.addIcon:hover::before,
+.addIcon:hover::after,
+.substractIcon:hover::after {
+	background-color: white;
+}
+.childrenContainer {
 	display: flex;
 	flex-direction: column;
 }
 .childrenContainer div {
 	position: relative;
-}
-.substractIcon{
-	position: absolute;
-	left: -155px;
 }
