--- a/src/Components/Form/Select/Select.module.css
+++ b/src/Components/Form/Select/Select.module.css
@@ -1,16 +1,13 @@
 .customSelect {
 	position: relative;
 	width: 250px;
-	margin-bottom: 20px;
 }
 .select {
 	width: 100%;
-	appearance: none;
-	height: 30px;
+	height: 35px;
+	position: relative;
 	border: 0.5px solid #000000;
-	text-align: center;
 	cursor: pointer;
-	z-index: 1;
 }
 .customSelect::after {
 	content: '';
@@ -25,8 +22,29 @@
 	pointer-events: none;
 	transition: 0.2s;
 }
-
-.customSelect:focus-within::after   {
+.customSelectFocus::after {
 	transform: rotate(135deg);
 	top: 10px;
+	z-index: 99;
+}
+.optionContainer {
+	display: none;
+	position: absolute;
+	top: 0;
+	width: 100%;
+}
+.option {
+	height: 35px;
+	width: 100%;
+	border-bottom: 0.5px solid black;
+	border-left: 0.5px solid black;
+	border-right: 0.5px solid black;
+	background-color: #fff;
+	z-index: 2;
+}
+.showOption {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
 }
