--- a/src/Components/Form/Form.module.css
+++ b/src/Components/Form/Form.module.css
@@ -1,137 +1,144 @@
 .form {
-	opacity: 0;
-	position: relative;
-	margin-top: 100px;
+  opacity: 0;
+  position: relative;
+  margin-top: 100px;
+  position: absolute;
+  top: 0;
+  left: 50;
+  transform: translateX(-50%);
 }
 .header {
-	position: absolute;
-	font-size: 16px;
-	line-height: 46.8px;
+  position: absolute;
+  font-size: 16px;
+  line-height: 46.8px;
 }
 .header h1 {
-	font-family: Instrument Serif;
+  font-family: Instrument Serif;
 }
 .randomizePaniniButton,
 .header {
-	position: absolute;
-	top: -70px;
+  position: absolute;
+  top: -70px;
 }
 .randomizePaniniButton {
-	width: 200px;
-	right: 0;
-	transition: 0.4s;
+  width: 200px;
+  right: 0;
+  transition: 0.4s;
 }
 .randomizePaniniButton button {
-	width: 100%;
-	padding: 14px 20px 14px 15px;
-	text-transform: uppercase;
-	background-color: #fff;
-	border: none;
-	cursor: pointer;
+  width: 100%;
+  padding: 14px 20px 14px 15px;
+  text-transform: uppercase;
+  background-color: #fff;
+  border: none;
+  cursor: pointer;
 }
 .randomizePaniniButton img {
-	margin-right: 6px;
-	transition: 0.4s;
+  margin-right: 6px;
+  transition: 0.4s;
 }
 .randomizePaniniButton:hover {
-	border: 0.5px solid black;
+  border: 0.5px solid black;
 }
 .randomizePaniniButton:hover img {
-	transform: rotate(90deg);
+  transform: rotate(90deg);
 }
 .container {
-	width: 630px;
-	border: 0.5px solid #000000;
-	padding: 100px 50px;
-	margin-bottom: 20px;
-	background-color: #fff;
+  width: 630px;
+  border: 0.5px solid #000000;
+  padding: 100px 50px;
+  margin-bottom: 20px;
+  background-color: #fff;
 }
 .container h3 {
-	padding-bottom: 50px;
-	margin: 0 50px;
-	border-bottom: 0.5px solid #000000;
-	font-size: 26px;
-	text-transform: uppercase;
-	font-family: Instrument Serif;
-	font-weight: 400;
-	line-height: 33.8px;
-	text-underline-position: from-font;
-	text-decoration-skip-ink: none;
+  padding-bottom: 50px;
+  margin: 0 50px;
+  border-bottom: 0.5px solid #000000;
+  font-size: 26px;
+  text-transform: uppercase;
+  font-family: Instrument Serif;
+  font-weight: 400;
+  line-height: 33.8px;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
 }
-.vegetablesContainer {
-	display: grid;
-	gap: 15px 5px;
-	grid-template-columns: 100px 100px 100px;
-}
-.vegetablesContainer input {
-	position: absolute;
-	width: 0;
-	height: 0;
-}
-.vegetablesContainer label {
-	position: relative;
-	height: 40px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	cursor: pointer;
-	background-color: #fbfbfb;
-	font-size: 12px;
-	line-height: 15.74px;
-	color: black;
-}
-.vegetablesContainer input:checked + label {
-	background-color: white;
-	border: 1px solid black;
-}
+
 .spreadContainer {
-	display: flex;
-	justify-content: space-between;
-	width: 120px;
+  display: flex;
+  justify-content: space-between;
+  width: 120px;
 }
 
 .radiusCheckbox,
 .radiusCheckbox::before {
-	border-radius: 50%;
+  border-radius: 50%;
 }
 .servingContainer {
-	display: flex;
-	flex-direction: row-reverse;
-	width: 300px;
-	text-align: left;
+  display: flex;
+  flex-direction: row-reverse;
+  width: 300px;
+  text-align: left;
 }
 .toppingContainer {
-	display: flex;
-	width: 120px;
-	justify-content: space-between;
+  display: flex;
+  width: 120px;
+  justify-content: space-between;
 }
 .addToOrderContainer {
-	display: flex;
-	justify-content: space-between;
-	width: 150px;
+  display: flex;
+  justify-content: space-between;
+  width: 150px;
 }
 .inputPaniniName {
-	width: 330px;
-	height: 36px;
-	position: relative;
+  width: 330px;
+  height: 36px;
+  position: relative;
 }
 .inputPaniniName input {
-	position: absolute;
-	right: 0;
-	width: 100%;
-	padding: 10px;
+  position: absolute;
+  right: 0;
+  width: 100%;
+  padding: 10px;
 }
 .inputPaniniName input::placeholder {
-	padding: 10px;
+  padding: 10px;
+}
+.endButtonsContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  height: 150px;
+  margin: 0 50px;
+}
+.placeOrderButton,
+.startAgainButton {
+  border: none;
+  padding: 14px 20px;
+  height: 44px;
+  font-size: 12px;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+.placeOrderButton {
+  width: 470px;
+  margin-bottom: 10px;
+  background-color: black;
+  color: white;
+}
+.startAgainButton {
+  background-color: #fff;
+  width: 80px;
+  width: 120px;
 }
 .fadeIn {
-	animation: fadeIn 5s ease-in forwards;
+  animation: fadeIn 5s ease-in forwards;
 }
 @keyframes fadeIn {
-	from {
-		opacity: 0;
-	}
-	to {
-		opacity: 1;
-	}
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
