implement rhf into form UI

--- a/src/Components/Form/Switch/Switch.module.css
+++ b/src/Components/Form/Switch/Switch.module.css
@@ -4,6 +4,7 @@
   left: 80px;
   top: 23px;
   display: flex;
+  justify-content: space-between;
   width: 100px;
 }
 .input {
@@ -36,10 +37,6 @@
   border: 0.5px solid black;
   transform: translateX(-100%);
 }
-
-.addIcon {
-  margin-left: 10px;
-}
 .addIcon,
 .substractIcon {
   display: flex;
@@ -68,7 +65,7 @@
 }
 .substractIcon {
   position: absolute;
-  left: -155px;
+  left: -119px;
   top: 50%;
   transform: translateY(-50%);
 }
@@ -88,4 +85,7 @@
 .addedComponent {
   position: relative;
   margin: 10px 0;
+}
+.childrenContainer {
+  right: 0;
 }
